# clinical-microschemas

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  404.html  README.md  config.public.mk  config.yaml  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
about/: index.html
docs/: about.md  index.md
elements/: index.html
elements/ActivityTypeEnum/: index.html
elements/AssociatedEvidenceEnum/: index.html
elements/BodyMassIndexQuantity/: index.html
elements/BodyMassIndexRecord/: index.html
elements/BodyMassIndexRecord001/: index.html
elements/BodyMassIndexRecord002/: index.html
elements/BodyPositionEnum/: index.html
elements/Boolean/: index.html
elements/ClinicalMeasurementRecord/: index.html
elements/CodedValue/: index.html
elements/CollectedByEnum/: index.html
elements/ComparatorEnum/: index.html
elements/ConditionSeverityEnum/: index.html
elements/ConditionStatusRecord/: index.html
elements/Context/: index.html
elements/ContextEnum/: index.html
elements/Curie/: index.html
elements/DataTypeEnum/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/DrugStatusRecord/: index.html
elements/FamilyRelationshipEnum/: index.html
examples/: README.md
schema/: clinical_microschemas.yaml
search/: search_index.json
tests/: test_data.py
(+150 files in other folders)
