[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "clinical_microschemas"
description = "Clinical microschemas for composable clinical data elements"
authors = [
  {name = "diatomsRcool", email = "annethessen@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.9.4",
]

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/clinical_microschemas/datamodel/clinical_microschemas_pydantic.py",
  "src/clinical_microschemas/datamodel/clinical_microschemas.py",
]
ignore-words-list = "linke"
quiet-level = 3

[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/clinical_microschemas/datamodel/clinical_microschemas_pydantic.py",
  "src/clinical_microschemas/datamodel/clinical_microschemas.py",
]
